Updated the Status Service and added new JSON files for Priority and Tenant
