# app/routes/master.route.js
@@ -17,6 +17,8 @@ function init(router) {
         .get(getSubTypeByCategoryCodeAndWorkType);
     router.route('/status')
          .post(getStatusDescFromStatusCode);
+    router.route('/status/:statusCode')
+         .get(getStatusFromStatusCode);
 };
 
 
@@ -32,7 +34,7 @@ function getSubTypeByCategoryCodeAndWorkType(req, res) {
         response.data.workSubtypeCode = result;
         response.status.code = "200";
         response.status.message = "fetched the work subtype with category code :" + categoryCode + "successfully.";
-        logger.info("fetched the work subtype with category code :" + categoryCode + "successfully.{{In Controller}}");
+        logger.info("fetched the work subtype with category code :" + categoryCode + " successfully.{{In Controller}}");
         res.status(200).json(response);
     }).catch(function (error) {
         logger.error("error while fetching work subtype with category code: " + categoryCode + " {{In Controller}}", error);
@@ -46,15 +48,33 @@ function getStatusDescFromStatusCode(req, res) {
     var response = new Response();
     var workOrderStatusCodes = req.body;
     masterService.getStatusDescFromStatusCode(workOrderStatusCodes).then(function (statusResponseArray) {
-        response.data.statusResponseArray = statusResponseArray;
+        response.data = statusResponseArray;
         response.status.code = "200";
         response.status.message = "fetched the work order status data for status codes :"+workOrderStatusCodes;
-        logger.info("fetched the work order status data for status codes :"+workOrderStatusCodes + "successfully.{{In Controller}}");
+        logger.info("fetched the work order status data for status codes :"+workOrderStatusCodes + " successfully.{{In Controller}}");
         res.status(200).json(response);
     }).catch(function (error) {
         logger.error("error while fetching the work order status data for status codes :"+workOrderStatusCodes+ " {{In Controller}}", error);
         response.status.code = "500";
         response.status.message = "Work Subtype status data was not fetched successfully";
+        res.status(500).json(response);
+    });
+};
+
+function getStatusFromStatusCode(req, res) {
+    var response = new Response();
+    //var statusCode = req.query.statusCode;
+    var statusCode = req.params.statusCode;
+    masterService.getStatusFromStatusCode(statusCode).then(function (statusResponseArray) {
+        response.data = statusResponseArray;
+        response.status.code = "200";
+        response.status.message = "fetched the status data for status codes :"+statusCode;
+        logger.info("fetched the status data for status codes :"+statusCode + " successfully.{{In Controller}}");
+        res.status(200).json(response);
+    }).catch(function (error) {
+        logger.error("error while fetching the status data for status codes :"+statusCode+ " {{In Controller}}", error);
+        response.status.code = "500";
+        response.status.message = "Status data was not fetched successfully";
         res.status(500).json(response);
     });
 };
